# mlops_project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: retraining.md
notebooks/: data_load.ipynb  exploration.ipynb  preparation.ipynb  rapport.ipynb
src/mlops/: __init__.py  api.py  explain.py  monitor.py  prepare.py  simulate_production.py  streamlit_app.py  train.py
tests/: conftest.py  test_api.py  test_train.py
