[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damien Lahanque", email = "damien.lahanque.etu@univ-lille.fr" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mlops = "mlops:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
