[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damien Lahanque", email = "damien.lahanque.etu@univ-lille.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
mlops = "mlops:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
