[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damien Lahanque", email = "damien.lahanque.etu@univ-lille.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scikit-learn>=1.0.0",
    "mlflow>=2.10.0",
    "shap>=0.44.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.25.0",
    "evidently>=0.4.0",
    "pytest>=9.0.3",
    "duckdb>=1.5.3",
]

[project.scripts]
mlops = "mlops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
